# kafka-rebalance

./: .flake8  .gitignore  LICENSING.md  README.md  main.py  pyproject.toml  requirements.txt  tox.ini
kafka_rebalance/: __init__.py  __main__.py
lib/: connections.py  rebalance.py
tests/: test_kafka_rebalance.py
