[tool.poetry]
name = "kafka-rebalance"
version = "0.1.0"
description = ""
authors = ["Alex Parrill <aparrill@datto.com>"]
license = "GPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.6"
fabric = "^2.5.0"
kafka-python = "^2.0.1"

rebalance-core = {git = "https://github.com/datto/rebalance-core.git"}

[tool.poetry.dev-dependencies]
pytest = "^5.2"
autopep8 = "^1.5"
flake8 = "^3.7.9"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
